--- a/src/app/unauthorized/help/help.component.html
+++ b/src/app/unauthorized/help/help.component.html
@@ -1,5 +1,57 @@
 <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-  <div class="relative flex items-center justify-between h-16">
-    <p>help works!</p>
+  <div class="mt-10 sm:mt-0">
+    <div class="md:grid md:grid-cols-2 md:gap-6">
+
+      <div>
+        <div>
+          <div class="px-4 py-5 bg-white sm:p-6">
+            <div class="grid grid-cols-1">
+              <h3 class="text-5xl font-bold">Can't reset password</h3>
+            </div>
+            <div class="grid grid-cols-1 pt-5">
+              <h3 class="text-2xl font-bold">Old email address?
+              </h3>
+              <p class="grid grid-cols-1 pt-2">You need access to the email address on your Spotify account to open the password reset link we email you.</p>
+              <p class="grid grid-cols-1 pt-2">If you don't have access, here are some options:</p>
+              <ul class="list-disc list-inside pt-2">
+                <li class="pl-5">Regain access to the email address if possible</li>
+                <li class="pl-5"><a href="/register" class="underline">Create a new account</a> and start fresh</li>
+              </ul>
+            </div>
+            <div class="grid grid-cols-1 pt-5">
+              <h3 class="text-2xl font-bold">No account associated with email address?
+              </h3>
+              <p class="grid grid-cols-1 pt-2">Try entering any other email addresses you might have used to sign up.</p>
+
+              <p class="grid grid-cols-1 pt-2">If you think your email changed without your permission, see Think your account's been hacked?</p>
+
+            </div>
+            <div class="grid grid-cols-1 pt-5">
+              <h3 class="text-2xl font-bold">Didn’t get reset email?</h3>
+              <p class="grid grid-cols-1 pt-2">Check your spam/junk folders, or any other filtered folders.</p>
+
+              <p class="grid grid-cols-1 pt-2">If you don’t have access to your email address, see “Old email address?”.</p>
+
+            </div>
+            <div class="grid grid-cols-1 pt-5">
+              <h3 class="text-2xl font-bold">Invalid password reset link?</h3>
+
+              <p class="grid grid-cols-1 pt-2">Reset your password again, but this time open the emailed link in a private or incognito browser..</p>
+
+              <a href="/lost-password" class="grid grid-cols-1 pt-2 underline">Reset your password</a>
+
+            </div>
+            <div class="grid grid-cols-1 pt-5">
+              <h3 class="text-2xl font-bold">Too many requests?</h3>
+            </div>
+            <div class="grid grid-cols-1 pt-2">
+              <p>Try again later or use a different device.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
