--- a/src/app/authorized/profile/profile.component.html
+++ b/src/app/authorized/profile/profile.component.html
@@ -62,14 +62,10 @@
 
                 <div class="col-span-6 sm:col-span-3">
                   <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
-                  <select id="country" name="country"
-                          class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
-                    <option>United States</option>
-                    <option>Canada</option>
-                    <option>Mexico</option>
-                  </select>
+                  <input value= "{{user.country }}" type="text" name="country" id="country"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                         disabled>
                 </div>
-
               </div>
             </div>
             <div class="flex space-x-2 justify-end p-2">
