--- a/src/app/child-component/aws-relational-database-calculate/aws-relational-database-calculate.component.html
+++ b/src/app/child-component/aws-relational-database-calculate/aws-relational-database-calculate.component.html
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-1">
-  <h3 class="text-xl text-gray-400">SQL for PostgreSQL</h3>
+  <h3 class="text-xl text-gray-400">RDS for PostgreSQL</h3>
 </div>
 <div class="pt-2">
 </div>
@@ -8,13 +8,14 @@
   <label class="block text-sm font-medium text-[#707070] text-right pr-4">Monthly estimate</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
-  <label class="block text-sm font-medium text-[#707070] text-right pr-4">$6.73</label>
+  <label class="block text-sm font-medium text-[#707070] text-left pl-4 "></label>
+  <label class="block text-sm font-medium text-[#707070] text-right pr-4">{{pricePerHour * 730 | currency:'USD'}}</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
-  <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">{{selectedSize}} GB</label>
-  <label class="block text-sm font-medium text-[#707070] text-right pr-4">$11.00</label>
+  <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">{{size }} GB</label>
+  <label class="block text-sm font-medium text-[#707070] text-right pr-4">{{size * pricePerGb | currency:'USD'}}</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
   <label class="block text-sm font-bold text-[#707070] text-left pl-4 ">Total</label>
-  <label class="block text-sm font-bold text-[#707070] text-right pr-4">$17.73</label>
+  <label class="block text-sm font-bold text-[#707070] text-right pr-4">{{pricePerHour * 730 + pricePerGb * size | currency:'USD'}}</label>
 </div>
