--- a/src/app/child-component/aws-relational-database/aws-relational-database.component.html
+++ b/src/app/child-component/aws-relational-database/aws-relational-database.component.html
@@ -3,39 +3,40 @@
     <div class="shadow overflow-hidden sm:rounded-md">
       <div class="px-4 py-5 bg-white sm:p-6">
         <div class="grid grid-cols-1">
-          <h3 class="text-2xl">Azure</h3>
+          <h3 class="text-2xl">AWS</h3>
         </div>
         <div class="grid grid-cols-1">
-          <h3 class="text-xl text-gray-400">Database for PostgreSQL</h3>
+          <h3 class="text-xl text-gray-400">RDS for PostgreSQL</h3>
         </div>
         <div class="grid grid-cols-1 pt-2">
-          <label for="azure-region" class="block text-sm font-medium text-gray-700">Region</label>
-          <select [(ngModel)]="selectedRegion" (ngModelChange)="selectedRegionChanged()" id="azure-region" name="azure-region"
+          <label for="aws-region" class="block text-sm font-medium text-gray-700">Region</label>
+          <select [(ngModel)]="selectedRegion" (ngModelChange)="selectedRegionChanged()" id="aws-region" name="aws-region"
                   class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
             <option *ngFor="let item of region">{{item.region}}</option>
           </select>
         </div>
+
         <div class="grid grid-cols-1 pt-2">
-          <label for="azure-compute" class="block text-sm font-medium text-gray-700">Compute</label>
-          <select [(ngModel)]="selectedInstanceSerieDatabase" (ngModelChange)="selectedInstanceSerieChanged($event)" id="azure-compute" name="azure-compute"
+          <label for="aws-db-instance" class="block text-sm font-medium text-gray-700">Database instance</label>
+          <select [(ngModel)]="selectedInstanceTypeDatabase" (ngModelChange)="selectedInstanceTypeDatabaseChanged($event)" id="aws-db-instance" name="aws-db-instance"
                   class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
-            <option *ngFor="let item of instanceSerieDatabase" [ngValue]="item">Family: {{item.instance_serie}} {{item.core}} vCPU {{item.ram}} GiB Memory</option>
+            <option *ngFor="let item of instanceTypeDatabase" [ngValue]="item">Family: {{item.instance_type}} {{item.core}} vCPU {{item.ram}} GiB Memory</option>
           </select>
         </div>
         <div  class="grid grid-cols-1 pt-2">
-          <label for="azure-compute-price" class="block text-sm font-medium text-gray-700">Price per hour</label>
-          <input type="text" id="azure-compute-price" #azureInstancePrice name="azure-compute-price"
+          <label for="aws-instance-price" class="block text-sm font-medium text-gray-700">Price per hour</label>
+          <input type="text" id="aws-instance-price" #awsInstancePrice name="aws-instance-price"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm"
                  [(ngModel)]="selectedPricePerHour" disabled>
         </div>
         <div class="grid grid-cols-2 pt-2">
-          <label for="azure-storage" class="block text-sm font-medium text-gray-700">Storage size (GB)</label>
-          <label for="azure-storage-price" class="block text-sm font-medium text-gray-700">Price per GB</label>
+          <label for="aws-size" class="block text-sm font-medium text-gray-700">Size (GB)</label>
+          <label for="aws-size-price" class="block text-sm font-medium text-gray-700">Price per GB</label>
         </div>
         <div class="grid grid-cols-2 gap-2">
-          <input type="number" [(ngModel)]="selectedSize" (ngModelChange)="selectedStorageSizeChanged($event)"id="azure-storage" name="azure-storage"
+          <input type="number" [(ngModel)]="selectedSize" (ngModelChange)="selectedStorageSizeChanged($event)"id="aws-size" name="aws-size"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
-          <input type="number" [(ngModel)]="selectedPricePerGb" id="azure-storage-price" name="azure-storage-price"
+          <input type="number" [(ngModel)]="selectedPricePerGb" id="aws-size-price" name="aws-size-price"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm" disabled>
         </div>
       </div>
