--- a/src/app/child-component/gcp-cloud-sql-calculate/gcp-cloud-sql-calculate.component.html
+++ b/src/app/child-component/gcp-cloud-sql-calculate/gcp-cloud-sql-calculate.component.html
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-1">
-  <h3 class="text-xl text-gray-400">Database for PostgreSQL</h3>
+  <h3 class="text-xl text-gray-400">SQL for PostgreSQL</h3>
 </div>
 <div class="pt-2">
 </div>
@@ -8,8 +8,12 @@
   <label class="block text-sm font-medium text-[#707070] text-right pr-4">Monthly estimate</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
-  <label class="block text-sm font-medium text-[#707070] text-left pl-4 "></label>
-  <label class="block text-sm font-medium text-[#707070] text-right pr-4">{{pricePerHour * 730 | currency:'USD'}}</label>
+  <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">{{sizePerCpu}} vCPU</label>
+  <label class="block text-sm font-medium text-[#707070] text-right pr-4">{{sizePerCpu * pricePerCpu * 730 | currency:'USD'}}</label>
+</div>
+<div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
+  <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">{{sizePerRam }} RAM</label>
+  <label class="block text-sm font-medium text-[#707070] text-right pr-4">{{sizePerRam * pricePerRam * 730 | currency:'USD'}}</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
   <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">{{size }} GB</label>
@@ -17,5 +21,5 @@
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
   <label class="block text-sm font-bold text-[#707070] text-left pl-4 ">Total</label>
-  <label class="block text-sm font-bold text-[#707070] text-right pr-4">{{pricePerHour * 730 + pricePerGb * size | currency:'USD'}}</label>
+  <label class="block text-sm font-bold text-[#707070] text-right pr-4">{{sizePerCpu * pricePerCpu * 730 +  sizePerRam * pricePerRam * 730 + size * pricePerGb| currency:'USD'}}</label>
 </div>
