--- a/src/app/child-component/gcp-compute-engine/gcp-compute-engine.component.html
+++ b/src/app/child-component/gcp-compute-engine/gcp-compute-engine.component.html
@@ -38,7 +38,7 @@
                  [(ngModel)]="selectedMachineType" disabled>
 
         </div>
-        <div>
+        <div class="grid grid-cols-1 pt-2">
         <label for="gcp-size" class="block text-sm font-medium text-gray-700">Size (GB)</label>
         <input type="number" [(ngModel)]="selectedSize" (ngModelChange)="selectedStorageSizeChanged($event)"id="gcp-size" name="gcp-size"
                class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
